<resources>
    <string name="app_name">Placemark</string>
    <string name="hint_placemarkTitle">Placemark Title</string>
    <string name="hint_placemarkDescription">Description</string>
    <string name="button_addPlacemark">Add Placemark</string>
    <string name="menu_addPlacemark">Add</string>
    <string name="menu_cancelPlacemark">Cancel</string>
    <string name="enter_placemark_title"> Please enter a Placemark Title </string>
    <string name="save_placemark"> Save Placemark </string>
    <string name="button_addImage"> Add Image </string>
    <string name="button_addImage2"> Add Second Image </string>
    <string name="select_placemark_image">Select placemark image</string>
    <string name="change_placemark_image">Change placemark image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_deletePlacemark">Delete</string>
    <string name="menu_upPlacemark">Up</string>
    <string name="menu_settingPlacemark">Setting</string>
    <string name="menu_logoutPlacemark">Logout</string>
    <string name="title_activity_login">Sign in</string>
    <string name="Splash_label">Hillforts App</string>
    <string name="menu_savePlacemark">Save</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_placemark_maps">Map of All Placemarks </string>
    <string name="title_activity_placemark_list">Placemarks</string>
    <string name="title_activity_placemark">Placemark</string>
    <string name="title_activity_edit_location">Placemark</string>
    <string name="title_activity_loginActvity">Login</string>
    <string name="title_activity_register">Register</string>
</resources>
