<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
    android:id="@+id/item_add"
    android:title="@string/menu_addPlacemark"
    app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/item_delete"
        android:title="@string/menu_deletePlacemark"
        app:showAsAction="ifRoom"/>

    <group>
        <item
            android:id="@+id/item_up"
            android:title="@string/menu_upPlacemark"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/item_setting"
            android:title="@string/menu_settingPlacemark"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/item_logout"
            android:title="@string/menu_logoutPlacemark"
            app:showAsAction="ifRoom"/>

    </group>
</menu>